# compliance-agente

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/agents/: nodes.py  tools.py
src/app/: main.py  ui.py
src/core/: graph.py  state.py
src/eval/: evaluate.py
src/ingestion/: ingest.py
src/utils/: settings.py
