[project]
name = "compliance-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix>=12.16.0",
    "chainlit>=2.9.0",
    "fastapi>=0.121.3",
    "fastembed>=0.7.3",
    "langchain>=1.0.8",
    "langchain-google-genai>=3.1.0",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "openinference-instrumentation-langchain>=0.1.55",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.3.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.0",
    "ragas>=0.3.9",
]
